chore: 設定を更新
- VSCode拡張機能に Figma, GitHub Copilot, Copilot Chat を追加
- Docker拡張を `ms-azuretools.vscode-containers` に変更
- Ghostty の設定に `font-feature = -dlig` を追加（日本語表示の崩れを修正）
- `.zshrc` に Docker CLI 補完の設定を追加

--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,5 +1,6 @@
 font-family = "JetBrains Mono"
 font-size = 14
+font-feature = -dlig
 background-opacity = 0.95
 unfocused-split-opacity = 0.2
 copy-on-select = clipboard
